# gproxy

./: .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  README_zh.md  gproxy.example.toml  release.sh  route.md  zeabur.yaml
.github/workflows/: docker.yml  release-binary.yml
apps/gproxy/: Cargo.toml
apps/gproxy/frontend/src/: App.tsx
apps/gproxy/src/: admin.rs  cli.rs  data_dir.rs  dsn.rs  main.rs  snapshot.rs
crates/gproxy-core/: Cargo.toml
crates/gproxy-core/src/: auth.rs  classify.rs  core.rs  handler.rs  lib.rs
crates/gproxy-protocol/: Cargo.toml
crates/gproxy-protocol/src/: sse.rs
crates/gproxy-provider-core/: Cargo.toml
crates/gproxy-provider-core/src/: credential_pool.rs  lib.rs  provider.rs  request.rs  traffic.rs
crates/gproxy-provider-impl/: Cargo.toml
crates/gproxy-provider-impl/src/: client.rs  dispatch.rs  lib.rs  registry.rs  upstream.rs
crates/gproxy-storage/: Cargo.toml
crates/gproxy-storage/src/: bus.rs  db.rs  lib.rs  traffic.rs
crates/gproxy-transform/: Cargo.toml
crates/gproxy-transform/src/: lib.rs
src/: admin.rs  cli.rs  config.rs  context.rs  front.rs  lib.rs  main.rs  public.rs  route.rs
src/admin/: email.rs  providers.rs  usage.rs
src/formats/: mod.rs
src/formats/claude/: count_tokens.rs  file.rs  messages.rs  mod.rs  model_get.rs  models_list.rs  skill.rs  skill_version.rs  stream.rs  types.rs
src/formats/gemini/: count_tokens.rs  generate_content.rs  mod.rs  model_get.rs  models_list.rs  query.rs  stream_generate_content.rs  types.rs
src/formats/openai/: chat_completions.rs  conversations.rs  mod.rs  model_get.rs  models_list.rs  responses.rs  responses_input_tokens.rs  types.rs
src/formats/transform/: gen_claude_messages_to_gemini_generate.rs  gen_claude_messages_to_gemini_generate_stream.rs  gen_claude_messages_to_openai_chat.rs  gen_claude_messages_to_openai_chat_stream.rs  gen_gemini_generate_to_claude_messages.rs  gen_gemini_generate_to_claude_messages_stream.rs  gen_gemini_generate_to_openai_chat.rs  gen_gemini_generate_to_openai_chat_stream.rs  gen_openai_chat_to_claude_messages.rs  gen_openai_chat_to_gemini_generate.rs  gen_openai_chat_to_gemini_generate_stream.rs  mod.rs  models_claude_to_gemini.rs  models_claude_to_openai.rs  models_gemini_to_claude.rs  models_gemini_to_openai.rs  models_openai_to_claude.rs  models_openai_to_gemini.rs
src/oauth/: mod.rs
src/providers/: admin.rs  auth.rs  credential_index.rs  credential_status.rs  endpoints.rs  google_oauth.rs  google_project.rs  mod.rs  router.rs  usage.rs
src/providers/aistudio/: admin.rs  config.rs  mod.rs  router.rs
src/providers/antigravity/: admin.rs  config.rs  constants.rs  mod.rs  router.rs  usage.rs
src/providers/claude/: admin.rs  config.rs  mod.rs  router.rs
src/providers/claudecode/: admin.rs  config.rs  constants.rs  mod.rs  oauth.rs  router.rs
src/providers/codex/: admin.rs  config.rs  mod.rs  router.rs  tokenizer.rs  transform.rs  usage.rs
src/providers/common/: gemini_models.rs  mod.rs  passthrough_transform.rs  usage.rs
src/providers/deepseek/: admin.rs  config.rs  mod.rs  router.rs
src/providers/geminicli/: admin.rs  config.rs  constants.rs  mod.rs  router.rs
src/providers/nvidia/: admin.rs  config.rs  mod.rs  router.rs
src/providers/openai/: admin.rs  config.rs  mod.rs  router.rs
src/providers/vertex/: admin.rs  auth.rs  config.rs  mod.rs  router.rs
src/providers/vertexexpress/: admin.rs  config.rs  mod.rs  router.rs  transform.rs
src/storage/: file.rs  memory.rs  mod.rs  s3.rs  toml_states.rs
src/storage/db/: app.rs  mod.rs
src/usage/: database.rs  file.rs  memory.rs  mod.rs  s3.rs  view.rs
(+264 files in other folders)
